--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
 
 /* #quote-box,  */
 #checklist-box, #good-luck-box {
-    background-color: mistyrose;
+    background-color: aliceblue;
     border: 1px solid #ccc;
     border-radius: 10px;
     padding: 20px;
